# code-reader

./: Cargo.toml  README.md
src/: app.rs  editor.rs  file_explorer.rs  main.rs
src/editor/: buffer.rs
src/ui/: theme.rs
